<resources>
    <string name="app_name">PropelrrExam</string>
    <string name="full_name">Full Name:</string>
    <string name="email_address">Email Address:</string>
    <string name="mobile_number">Mobile Number:</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="age">Age:</string>
    <string name="gender">Gender:</string>
    <string name="placeholder">Lorem ipsum dolor</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date">Date</string>
    <string name="select_a_gender">Select a Gender</string>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
