<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:hint="@string/full_name">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fullname"
            android:layout_width="match_parent"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ,. "
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:hint="@string/email_address">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailaddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:hint="@string/mobile_number">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mobilenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">
        <TextView
            android:id="@+id/dateofbirthlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:textSize="18sp"
            android:text="@string/date_of_birth"/>
        <TextView
            android:id="@+id/dateofbirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/dateofbirthlabel"
            android:textSize="18sp"
            android:paddingLeft="8dp"
            android:hint="@string/date"
            android:layout_toEndOf="@+id/dateofbirthlabel"
            android:paddingStart="8dp" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">
        <TextView
            android:id="@+id/ageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:textSize="18sp"
            android:text="@string/age"/>
        <TextView
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ageText"
            android:textSize="18sp"
            android:paddingLeft="8dp"
            android:layout_toEndOf="@+id/ageText"
            android:paddingStart="8dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <TextView
            android:id="@+id/genderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:textSize="18sp"
            android:text="@string/gender"/>

        <RadioGroup
            android:paddingLeft="8dp"
            android:layout_toRightOf="@id/genderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:checkedButton="@+id/male"
            android:layout_toEndOf="@id/genderText">
            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"/>
            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"/>
        </RadioGroup>

    </RelativeLayout>

    <Button
        android:id="@+id/submit"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Submit" />

</LinearLayout>
